--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
